--- a/Latihan7.html
+++ b/Latihan7.html
@@ -15,8 +15,7 @@
 <body>
     <div id="map" class="map" tabindex="0"></div>
     <button id="zoom-out">Zoom out</button>
-    <button id="zoom-in">Zoom in>
-    </button>
+    <button id="zoom-in">Zoom in</button>
     <script>
         var map = new ol.Map({
             layers: [
@@ -52,8 +51,7 @@
         };
 
         // Tambah data point
-
-        var point = new ol.geom.Point(ol.proj.transform([110, -7], 'EPSG:4326', 'EPSG:3857'));
+        var point = new ol.geom.Point(ol.proj.transform([110.374518, -7.774823], 'EPSG:4326', 'EPSG:3857'));
         var feature = new ol.Feature({
             geometry: point
         });
@@ -65,13 +63,6 @@
         });
 
         map.addLayer(vectorLayer);
-
-        // Tambah data poligon
-        var polygon = L.polygon([
-        [110, -6],
-        [110, -7],
-        [110, -8]
-        ]).addTo(map);
     </script>
 </body>
 </html>
